--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,9 +5,15 @@
     <%- include("./partials/nav.ejs")  %> 
 
     <section class="not-found content">
-        OOPS, page not found :)
+        <main>
+            <div>
+                <i class="icon fas fa-face-sad-tear fa-2x"></i>
+            </div>
+            <h1>404</h1>
+            <p>Not Found</p>
+        </main>
     </section>
-
+    
     <%- include("./partials/footer.ejs") %>
 </body>
 </html>
