--- a/public/styles.css
+++ b/public/styles.css
@@ -94,13 +94,14 @@ h3{
     margin: 10px 0;
     padding: 8px;
     font-family: 'Noto Serif ', sans-serif;
+    font-size: 20px;
 }
 .create-blog label{
     display: block;
     margin-top: 24px;
 }
 textarea{
-    height: 120px;
+    height: 150px;
 }
 .create-blog button{
     margin-top: 20px;
@@ -110,4 +111,43 @@ textarea{
     border: none;
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+/* 404 */
+.not-found{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.not-found div{
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.not-found .icon{
+    color: #A64B2A;
+    animation-name: sad;
+    animation-duration: 1s;
+    animation-fill-mode: backwards;
+    animation-iteration-count: infinite;
+}
+@keyframes sad{
+    0% {
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.not-found h1{
+    font-size: 6rem;
+    color: #A64B2A;
+}
+.not-found p{
+    text-align: center;
+    letter-spacing: 2px;
 }
