--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/953852d2bd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Ghost | <%= title %></title>
 </head>
